Sun Sep  7 08:06:38 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: split compileLHS
	  by using visitor pattern.

	* net/loveruby/cflat/ast/ASTLHSVisitor.java: new interface.

	* net/loveruby/cflat/ast/DereferenceNode.java: implement
	  #acceptLHS.

	* net/loveruby/cflat/ast/ArefNode.java: ditto.

	* net/loveruby/cflat/ast/PtrMemberNode.java: ditto.

	* net/loveruby/cflat/ast/MemberNode.java: ditto.

	* net/loveruby/cflat/ast/Node.java: ditto.

	* net/loveruby/cflat/ast/VariableNode.java: ditto.

Sun Sep  7 07:37:34 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: opassign should
	  not spill DX because division uses DX.

	* net/loveruby/cflat/ast/PtrMemberNode.java: #dereferedType should
	  return Type instead of ComplexType because DereferenceChecker
	  checks derefered type by this method.

	* test: test ptr->memb with complex pointer expression.

Sun Sep  7 06:50:56 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: calculate LHS
	  value on AX, not BX.

Sun Sep  7 05:10:46 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: parse sizeof expr.

	* net/loveruby/cflat/compiler/Visitor.java: support
	  SizeofTypeNode, SizeofExprNode.

	* net/loveruby/cflat/compiler/TypeResolver.java: ditto.

	* net/loveruby/cflat/compiler/CodeGenerator.java: ditto.

	* net/loveruby/cflat/ast/ASTVisitor.java: ditto.

	* net/loveruby/cflat/ast/SizeofTypeNode.java: new file.

	* net/loveruby/cflat/ast/SizeofExprNode.java: new file.

	* net/loveruby/cflat/type/Type.java: default alignment equals to
	  size, not allocSize (e.g. int[4] should be aligned on 4, not 16).

	* net/loveruby/cflat/type/StructType.java: element offset
	  calculation was wrong. Elements should be aligned on its own
	  alignment.

	* net/loveruby/cflat/type/StructType.java: size calculation was