@@ -1,3 +1,7 @@
+Sun Sep  7 08:36:28 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/Compiler.java: implement -o option.
+
 Sun Sep  7 08:06:38 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/CodeGenerator.java: split compileLHS
